Added video poster image

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -448,11 +448,12 @@
       </div>
       <div
         class="hc-camp-detail mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <video aria-hidden="true" class="responsive" muted autoplay loop playsinline>
+        {% set publicId = images["header-camp.png"]["public_id"] %}
+        <video aria-hidden="true" class="responsive" muted autoplay loop playsinline
+               poster="{{ publicId | cloudinaryUrl(width=622,height=622,crop="fill",dpr="auto") }}">
           <source
             src="https://res.cloudinary.com/topmonks/video/upload/c_crop,f_auto,g_center,h_622,q_auto,w_622/v1619106183/www.hackercamp.cz/Pohled_na_Soben%CC%8Ca%CC%81k_z_dronu.mp4"
           />
-          {% set publicId = images["header-camp.png"]["public_id"] %}
           <picture>
             <source
               media="screen and (max-width: 599px)"
