ARX - Header video na Homepage

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -17,8 +17,8 @@
           </div>
         </div>
         <div class="intro__video">
-          <video aria-hidden="true" class="responsive" muted autoplay loop playsinline>
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_622,q_auto,w_700/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+          <video aria-hidden="true" muted autoplay loop playsinline poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628518180/arx.monks.cloud/arx-poster-header.png">
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_740,q_auto,w_840/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
         </div>
       </div>
