--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -8,8 +8,7 @@
   PostCube - Hlavní stránka
 {% endblock %}
 {% block head %}
-  <meta name="description"
-        content="Chytrá schránka PostCube pro vyzvedávání zásilek kdykoliv.">
+  <meta name="description" content="Chytrá schránka PostCube pro vyzvedávání zásilek kdykoliv.">
   <link rel="canonical" href="https://postcube.cz/">
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.postcube.cz/">
@@ -85,37 +84,27 @@
   <section id="" class="main-info">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
-        <div
-          class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <picture>
-            <source
-              media="screen and (max-width: 399px)"
-              srcset="{{ box_header | cloudinaryUrl(dpr="1", width=400) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr="1.5", width=400) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr="2", width=400) }} 2x">
-            <source
-              media="screen and (min-width: 400px) and (max-width: 599px)"
-              srcset="{{ box_header | cloudinaryUrl(dpr="1", width=600) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr="1.5", width=600) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr="2", width=600) }} 2x">
-            <source
-              media="screen and (min-width: 840px)"
-              srcset="{{ box_header | cloudinaryUrl(dpr="1", width=860) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr="2", width=860) }} 2x">
-            <img
-              alt="Fotka PostCube"
-              src="{{ box_header | cloudinaryUrl(dpr="auto", width=860) }}"
-              width="860"
-              height="581">
+            <source media="screen and (max-width: 399px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
+                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=400) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(dpr=" 2", width=400) }} 2x">
+            <source media="screen and (min-width: 400px) and (max-width: 599px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=600) }} 1x,
+                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=600) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(dpr=" 2", width=600) }} 2x">
+            <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
+                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
+            <img alt="Fotka PostCube" src="{{ box_header | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="581">
           </picture>
         </div>
-        <div
-          class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h1>Nečekejte na kurýra</h1>
-          <p>Je spousta zábavnějších činností než čekání na kurýra. S&nbsp;chytrou
-            schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
-          <b>#necekamnakuryra</b></p>
+          <p>Je spousta zábavnějších činností než čekání na kurýra. S&nbsp;chytrou schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
+            <a href="https://www.instagram.com/post.cube/">
+              <b>#necekamnakuryra</b>
+            </a>
+          </p>
         </div>
       </div>
     </div>
@@ -126,29 +115,27 @@
         <h2>Doručení i&nbsp;vyzvednutí je s&nbsp;PostCube hračka.</h2>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48" viewBox="0 0 30.412 48.659">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48" viewbox="0 0 30.412 48.659">
           <defs>
-            <style>.a {
+            <style>
+              .a {
                 fill: #1538e5;
-              }</style>
+              }
+            </style>
           </defs>
           <g transform="translate(-297.293 -654.072)">
-            <path class="a"
-                  d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z"
-                  transform="translate(297.293 654.072)"/>
-            <path class="a"
-                  d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z"
-                  transform="translate(303.553 667.774)"/>
+            <path class="a" d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z" transform="translate(297.293 654.072)"/>
+            <path class="a" d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z" transform="translate(303.553 667.774)"/>
           </g>
         </svg>
         <h3>Pro radost z&nbsp;nakupování</h3>
-        <p>Svoji zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když zrovna
-          nebudete doma. Díky mobilní aplikaci budete mít o&nbsp;všem přehled.</p>
+        <p>Svoji zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když zrovna nebudete doma. Díky mobilní aplikaci budete mít o&nbsp;všem přehled.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="48" viewBox="0 0 38 38">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="48" viewbox="0 0 38 38">
           <defs>
-            <style>.a {
+            <style>
+              .a {
                 fill: #1538e5;
               }
 
@@ -156,51 +143,49 @@
                 fill: #fff;
                 stroke: rgba(0, 0, 0, 0);
                 stroke-miterlimit: 10;
-              }</style>
+              }
+            </style>
           </defs>
           <g transform="translate(-661 -658)">
-            <path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z"
-                  transform="translate(374.022 492.741)"/>
-            <path class="b"
-                  d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z"
-                  transform="translate(670.686 -1190.314)"/>
+            <path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z" transform="translate(374.022 492.741)"/>
+            <path class="b" d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z" transform="translate(670.686 -1190.314)"/>
           </g>
         </svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
         <p>Pro příjem zboží stačí kurýrovi poslat jednorázový odkaz pro otevření PostCube a při odesílání vyplnit údaje o příjemci a vložit zásilku do chytré schránky.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="48" viewBox="0 0 23.835 45.402">
+        <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="48" viewbox="0 0 23.835 45.402">
           <defs>
-            <style>.a {
+            <style>
+              .a {
                 fill: #1538e5;
-              }</style>
+              }
+            </style>
           </defs>
-          <path class="a"
-                d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z"
-                transform="translate(-25.608)"/>
+          <path class="a" d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z" transform="translate(-25.608)"/>
         </svg>
         <h3>Bezkontaktní a jednoduché</h3>
-        <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení
-          k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
+        <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
       </div>
       <div class="icon-section__content icon-section__content--wide mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662">
+        <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewbox="0 0 46.093 37.662">
           <defs>
-            <style>.a {
+            <style>
+              .a {
                 fill: #1538e5;
-              }</style>
+              }
+            </style>
           </defs>
-          <path class="a"
-                d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z"
-                transform="translate(-748.02 -2953.099)"/>
+          <path class="a" d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z" transform="translate(-748.02 -2953.099)"/>
         </svg>
         <h3>Síť dopravců roste každým dnem</h3>
-        <p><a href="https://liftago.cz">Liftago</a> už má PostCube plně integrovanou
-          do svého systému a odkaz k otevření schránky posíláme automaticky.</p>
-        <p>Při objednávce zásilek <strong>přes jiné dopravce</strong> vám kurýr
-          zavolá v&nbsp;okamžiku doručení a vy mu v aplikaci jednoduše pošlete odkaz pro otevření PostCube, kam váš balík vloží. Čekat na něj
-          nemusíte.</p>
+        <p>
+          <a href="https://liftago.cz">Liftago</a>
+          už má PostCube plně integrovanou do svého systému a odkaz k otevření schránky posíláme automaticky.</p>
+        <p>Při objednávce zásilek
+          <strong>přes jiné dopravce</strong>
+          vám kurýr zavolá v&nbsp;okamžiku doručení a vy mu v aplikaci jednoduše pošlete odkaz pro otevření PostCube, kam váš balík vloží. Čekat na něj nemusíte.</p>
       </div>
       <div class="action-link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="#how-it-works">Jak schránka PostCube funguje?</a>
@@ -214,64 +199,41 @@
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
     <picture>
-      <source
-        media="screen and (max-width: 839px)"
-        srcset="{{ box_n_woman | cloudinaryUrl(dpr="1", width=420) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(dpr="1.5", width=420) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(dpr="2", width=420) }} 2x">
-      <source
-        media="screen and (min-width: 840px)"
-        srcset="{{ box_n_woman | cloudinaryUrl(dpr="1", width=860) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(dpr="2", width=860) }} 2x">
-      <img alt="Fotografie PostCube u domu"
-           loading="lazy"
-           src="{{ box_n_woman | cloudinaryUrl(dpr="auto", width=860) }}"
-           width="860"
-           height="574">
+      <source media="screen and (max-width: 839px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=420) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(dpr=" 1.5", width=420) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(dpr=" 2", width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
+      <img alt="Fotografie PostCube u domu" loading="lazy" src="{{ box_n_woman | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="574">
     </picture>
     <picture>
-      <source
-        media="screen and (max-width: 839px)"
-        srcset="{{ hpBg02 | cloudinaryUrl(dpr="1", width=420) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(dpr="1.5", width=420) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(dpr="2", width=420) }} 2x">
-      <source
-        media="screen and (min-width: 840px)"
-        srcset="{{ hpBg02 | cloudinaryUrl(dpr="1", width=860) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(dpr="2", width=860) }} 2x">
-      <img alt="Fotografie PostCube jako poštovní schránky"
-          loading="lazy"
-          src="{{ hpBg02 | cloudinaryUrl(dpr="auto", width=860) }}"
-          width="860"
-          height="574">
+      <source media="screen and (max-width: 839px)" srcset="{{ hpBg02 | cloudinaryUrl(dpr=" 1", width=420) }} 1x,
+                {{ hpBg02 | cloudinaryUrl(dpr=" 1.5", width=420) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(dpr=" 2", width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ hpBg02 | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
+                {{ hpBg02 | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
+      <img alt="Fotografie PostCube jako poštovní schránky" loading="lazy" src="{{ hpBg02 | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="574">
     </picture>
   </div>
 
   <section class="testimonial mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div
-        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             x="0px" y="0px"
-             viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
+      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
           <path d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
 	c13.8,0,23.1-9.7,23.1-23.8V0h-21v19.7c0,5.4-3,9.1-7.5,9.1H38.5z"/>
-</svg>
+        </svg>
         <h2>Zásilku vám doručíme v&nbsp;rozmezí 8&ndash;18 hodin.</h2>
         <p>Tenhle špatný vtip už nikdy neuslyšíte.</p>
       </div>
-      <div
-        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             x="0px" y="0px"
-             viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
+      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
           <path d="M0.9,28.8v16.9h8.7c13.7,0,22.9-9.7,22.9-23.8V0h-21v19.7c0,5.4-2.9,9.1-7.5,9.1H0.9z M38.5,28.8v16.9H47
 	c13.8,0,23.1-9.7,23.1-23.8V0h-21v19.7c0,5.4-3,9.1-7.5,9.1H38.5z"/>
-</svg>
-        <h2>Pokus o&nbsp;doručení nebyl úspěšný. Zásilku si vyzvedněte na
-          pobočce.</h2>
+        </svg>
+        <h2>Pokus o&nbsp;doručení nebyl úspěšný. Zásilku si vyzvedněte na pobočce.</h2>
         <p>Tyhle zprávy aby čert vzal.</p>
       </div>
     </div>
@@ -282,4 +244,3 @@
   {% include 'components/faq.njk' %}
 
 {% endblock %}
-
