--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -152,7 +152,9 @@
           </g>
         </svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
-        <p>Pro příjem zboží stačí kurýrovi poslat jednorázový odkaz pro otevření PostCube a při odesílání vyplnit údaje o příjemci a vložit zásilku do chytré schránky.</p>
+        <p>Pro příjem zboží stačí kurýrovi poslat jednorázový odkaz pro otevření PostCube a při odesílání vyplnit údaje o příjemci a vložit zásilku do chytré schránky.
+          <a href="www.postcube.cz/jak-box-funguje/#step--one">Zjistit více</a>
+        </p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="48" viewbox="0 0 23.835 45.402">
