--- a/postcube.cz/src/html/components/faq-firmy.njk
+++ b/postcube.cz/src/html/components/faq-firmy.njk
@@ -5,7 +5,7 @@
       <h2>Možná vás zajímá ještě něco více</h2>
     </div>
     <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <div>
+      <div>
         <input type="checkbox" name="accordion__faq" id="faq2" class="faq--input">
         <label for="faq2" class="faq--label">Je možné poštovní box sdílet s někým jiným?</label>
         <div class="faq--content">
@@ -31,9 +31,7 @@
         <input type="checkbox" name="accordion__faq" id="faq4" class="faq--input">
         <label for="faq4" class="faq--label">Mohu si vzhled PostCube nějak přizpůsobit?</label>
         <div class="faq--content">
-          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat
-            z&nbsp;různých základových barev, případně PostCube opatřit polepem fólií
-            a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší chytré poštovní schránce také to, zda bude stát na stojanu, nebo bude připevněná na zeď.</p>
+          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat z&nbsp;různých základových barev, případně PostCube opatřit polepem fólií a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší chytré poštovní schránce také to, zda bude stát na stojanu, nebo bude připevněná na zeď.</p>
         </div>
       </div>
     </div>
@@ -41,7 +39,7 @@
       <div>
         <input type="checkbox" name="accordion__faq" id="faq5" class="faq--input">
         <label for="faq5" class="faq--label">
-Kolik místa PostCube zabere?</label>
+          Kolik místa PostCube zabere?</label>
         <div class="faq--content">
           <p>PostCube nabízíme ve čtyřech rozměrech a všechny lze libovolně kombinovat a stohovat až do výšky dvou metrů. Na 1m2 umístíte až 16 boxů velikosti XS. Díky tomu zabere tzv. hnízdo poštovních boxů jen minimum místa.</p>
         </div>
@@ -50,10 +48,7 @@ Kolik místa PostCube zabere?</label>
         <input type="checkbox" name="accordion__faq" id="faq6" class="faq--input">
         <label for="faq6" class="faq--label">Je možné aplikaci používat i&nbsp;na počítači?</label>
         <div class="faq--content">
-          <p>Ano. Své zásilky můžete spravovat v&nbsp;jednoduché mobilní aplikaci,
-            která je zdarma ke stažení pro Android (a brzy iPhone). Pokud si však
-            s&nbsp;aplikacemi příliš netykáte, můžete celý systém přijímání
-            i&nbsp;odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
+          <p>Ano. Své zásilky můžete spravovat v&nbsp;jednoduché mobilní aplikaci, která je zdarma ke stažení pro Android a iPhone. Pokud si však s&nbsp;aplikacemi příliš netykáte, můžete celý systém přijímání i&nbsp;odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
         </div>
       </div>
       <div>
@@ -61,10 +56,9 @@ Kolik místa PostCube zabere?</label>
         <label for="faq8" class="faq--label">Jak probíhá instalace chytré poštovní schránky?</label>
         <div class="faq--content">
           <p>
-Instalaci PostCube může za poplatek provést náš montážní tým a vy se nemusíte vůbec o nic starat, nebo se do montáže poštovní schránky můžete pustit na vlastní pěst. V přehledném návodu najdete tipy, který spojovací materiál použít a jaké nářadí budete k instalaci svépomocí potřebovat.</p>
+            Instalaci PostCube může za poplatek provést náš montážní tým a vy se nemusíte vůbec o nic starat, nebo se do montáže poštovní schránky můžete pustit na vlastní pěst. V přehledném návodu najdete tipy, který spojovací materiál použít a jaké nářadí budete k instalaci svépomocí potřebovat.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-
