--- a/postcube.cz/src/html/components/faq.njk
+++ b/postcube.cz/src/html/components/faq.njk
@@ -10,7 +10,8 @@
         <label for="faq2" class="faq--label">Jaká je životnost poštovní schránky PostCube?</label>
         <div class="faq--content">
           <p>PostCube je kovová, voděodolná poštovní schránka budoucnosti navržená tak, aby dlouhodobě odolávala nástrahám počasí. Její životnost závisí na způsobu umístění a používání. Životnost tužkových baterií uvnitř PostCube záleží zejména na způsobu a frekvenci jejího užívání a obvykle se pohybuje v řádu měsíců. Úroveň nabití vidíte v aplikaci, která tuto informaci aktualizuje při každém propojení s boxem.</p>
-          <p>V okamžiku zakoupení PostCube získáte záruku 2 roky a můžete se na nás obrátit v případě jakéhokoliv problému. Pro zvýšení bezpečnosti zásilek doporučujeme instalaci kamerového systému, který dodáváme spolu s PostCube.. </p>
+          <p>V okamžiku zakoupení PostCube získáte záruku 2 roky a můžete se na nás obrátit v případě jakéhokoliv problému. Pro zvýšení bezpečnosti zásilek doporučujeme instalaci kamerového systému, který dodáváme spolu s PostCube..
+          </p>
         </div>
       </div>
       <div>
@@ -40,7 +41,7 @@
         <input type="checkbox" name="accordion__faq" id="faq6" class="faq--input">
         <label for="faq6" class="faq--label">Je možné aplikaci používat i&nbsp;na počítači?</label>
         <div class="faq--content">
-          <p>Ano. Své zásilky můžete spravovat v jednoduché mobilní aplikaci, která je zdarma ke stažení pro Android (a brzy i iPhone). Pokud si však s aplikacemi příliš netykáte, můžete celý systém přijímání i odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
+          <p>Ano. Své zásilky můžete spravovat v jednoduché mobilní aplikaci, která je zdarma ke stažení pro Android a iPhone. Pokud si však s aplikacemi příliš netykáte, můžete celý systém přijímání i odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
         </div>
       </div>
       <div>
@@ -53,4 +54,3 @@
     </div>
   </div>
 </section>
-
