--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -10,7 +10,7 @@
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
         <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <p><span>We are proud of our<br>20-year track record</span> of building great companies in
+          <p><span><b>We are proud of our<br>20-year track record</b></span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
             <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
@@ -18,7 +18,7 @@
         </div>
         <div class="intro__video">
           <video aria-hidden="true" muted autoplay loop playsinline poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628518180/arx.monks.cloud/arx-poster-header.png">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_740,q_auto,w_840/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
         </div>
       </div>
