--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -22,7 +22,7 @@
 
 <body class="{{ bodyClass }}">
 <link rel="stylesheet" href="/assets/css/header.css">
-<header class="app-bar">
+<header class="app-bar app-bar--sticky">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div
@@ -33,8 +33,7 @@
           <div class="hamburger__bar"></div>
         </div>
       </div>
-      <div
-        class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
+      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-2-desktop">
         <a class="logo" href="/" title="Přejít na hlavní stránku">
           <svg width="77" height="77" viewBox="0 0 77 77" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>[Logo] ARX</title>
@@ -80,24 +79,7 @@
         hamburger.classList.toggle("hamburger__container--open");
         appBar.classList.toggle("app-bar--open");
       };
-    }
-
-    var lastPosition = 0;
-    var ticking = false;
-    document.addEventListener("scroll", function () {
-      lastPosition = window.scrollY;
-      if (!ticking) {
-        requestAnimationFrame(function () {
-          if (lastPosition > 0) {
-            appBar.classList.add("app-bar--sticky");
-          } else {
-            appBar.classList.remove("app-bar--sticky");
-          }
-          ticking = false;
-        });
-        ticking = true;
-      }
-    });
+    };
 
     addEventListener("resize", function () {
       if (!ticking) {
