--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -9,16 +9,26 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <p><span><b>We are proud of our<br>20-year track record</b></span> of building great companies in
-            successful partnerships with business owners and managers.</p>
-          <div class="button">
-            <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
+          <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+            <div><p><span><b>We are proud of our<br>20-year track record</b></span> of building great companies in
+                successful partnerships with business owners and managers.</p>
+            </div>
+            <div class="button">
+              <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
+            </div>
           </div>
+          <div class="intro__video mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
+            <video aria-hidden="true" muted loop playsinline
+                   poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628518180/arx.monks.cloud/arx-poster-header.png">
+              <source
+                src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+            </video>
         </div>
-        <div class="intro__video">
-          <video aria-hidden="true" muted autoplay loop playsinline poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628518180/arx.monks.cloud/arx-poster-header.png">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+        <div class="after-intro__video">
+          <video aria-hidden="true" muted autoplay loop playsinline
+                 poster="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,f_auto,h_622,q_auto,w_700/v1628518180/arx.monks.cloud/arx-poster-header.png">
+            <source
+              src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_744,q_auto,w_1177/v1628344441/arx.monks.cloud/arx-header.mp4"/>
           </video>
         </div>
       </div>
@@ -168,7 +178,7 @@
             <script type="module">
               const accordion = document.querySelector(".accordion");
               const getAccordionItem = (el) => el.classList.contains("accordion__item") ? el : getAccordionItem(el.parentElement);
-              accordion.addEventListener("click", ({target}) => getAccordionItem(target).classList.toggle("accordion__item--collapsed"));
+              accordion.addEventListener("click", ({ target }) => getAccordionItem(target).classList.toggle("accordion__item--collapsed"));
             </script>
           </div>
         </div>
