ARX - Header Změna hamburgeru

--- a/arx.monks.cloud/src/stylesheets/_colors.scss
+++ b/arx.monks.cloud/src/stylesheets/_colors.scss
@@ -10,4 +10,7 @@
   --mdc-theme--third-dark: #232A35;
 
   --mdc-theme--fourth: #FFA300;
+  --mdc-theme--fourth-light: #F9F7F7;
+
+  --mdc-theme--hamburger: #502CCC;
 }
