--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -24,6 +24,12 @@ html, body {
   margin: 0;
 }
 
+@media (max-width: 1023px) {
+  body {
+    background-color: var(--mdc-theme--fourth-light);
+  }
+}
+
 .responsive {
   width: 100%;
   height: auto;
@@ -124,10 +130,8 @@ html, body {
   border: 10px solid var(--mdc-theme--third);
   box-sizing: border-box;
   margin-top: 1em;
-  @media (max-width: 839px) {
-    width: 50px;
-    height: 50px;
-    border: 5px solid var(--mdc-theme--third);
+  @media (max-width: 1023px) {
+    display: none;
   }
 }
 
@@ -138,15 +142,19 @@ html, body {
 
 /* Section: Intro */
 .intro {
-  margin-bottom: 8em;
-
   .intro__box {
     z-index: 10;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.03);
   }
 
+  @media (max-width: 539px) {
+    p {
+      font-size: 20px;
+      line-height: 32px;
+    }
+  }
+
   @media (max-width: 839px) {
-    margin-top: 5em;
     span {
       font-weight: bold;
     }
@@ -159,14 +167,27 @@ html, body {
     .button {
       width: 100%;
       position: absolute;
-      bottom: -5em;
+      bottom: -14em;
       left: 3em;
+
+      a {
+        font-weight: 800;
+      }
     }
   }
-
-  @media (min-width: 1024px) {
+  @media (min-width: 839px) and (max-width: 1023px) {
+    .intro__box {
+      padding: 4em;
+    }
+  }
+  @media (max-width: 1023px) {
+    margin-top: 6em;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 8em;
     .intro__box {
       width: 660px;
+      padding: 8em 4em 4em;
     }
   }
 
@@ -176,16 +197,6 @@ html, body {
       font-weight: normal;
       line-height: 46px;
       max-width: 500px;
-    }
-    .intro__box {
-      padding: 8em 4em 4em;
-    }
-  }
-
-  @media (max-width: 539px) {
-    p {
-      font-size: 20px;
-      line-height: 32px;
     }
   }
 }
