--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -162,14 +162,9 @@ html, body {
       position: relative;
       width: 100%;
       margin: 0 auto;
-      padding: 1em 1.5em;
+      padding: 1em 1.5em 2em;
     }
     .button {
-      width: 100%;
-      position: absolute;
-      bottom: -14em;
-      left: 3em;
-
       a {
         font-weight: 800;
       }
