--- a/arx.monks.cloud/src/stylesheets/hp.scss
+++ b/arx.monks.cloud/src/stylesheets/hp.scss
@@ -21,6 +21,7 @@
       video {
         width: 100%;
         height: auto;
+        opacity: 70%;
       }
       button.play-btn {
         background: none;
@@ -44,15 +45,15 @@
         top: 40%;
         left: 41%;
       }
-      @media (min-width: 640px) and (max-width: 839px) {
+      @media (min-width: 640px) and (max-width: 599px) {
         position: absolute;
         top: 45%;
         left: 41%;
       }
-      @media (min-width: 640px) and (max-width: 839px) {
+      @media (min-width: 600px) and (max-width: 1023px) {
+        left: 45%;
         position: absolute;
-        top: 45%;
-        left: 41%;
+        top: 43%;
       }
     }
   }
@@ -62,7 +63,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      color: black;
+      opacity: 70%;
 
       @media (max-width: 1023px) {
         display: none;
