--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -15,7 +15,7 @@
   <meta property="og:site_name" content="postcube.cz">
 
   <style>
-    img {
+    img, picture {
       width: 100%;
       height: auto;
     }
@@ -70,7 +70,15 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotografie PostCube" src="{{ firmyBG | cloudinaryUrl(dpr=" auto", width=860) }}">
+          <picture>
+            <source media="screen and (max-width: 839px)" srcset="{{ firmyBG | cloudinaryUrl(width=420) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(width=600) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(width=600) }} 2x">
+            <source media="screen and (min-width: 840px)" srcset="{{ firmyBG | cloudinaryUrl(width=860) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(width=860) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(width=860) }} 2x">
+            <img alt="Fotka PostCube" loading="lazy" src="{{ firmyBG | cloudinaryUrl }}" width="860" height="574">
+          </picture>
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube do bytového domu nebo firmy</h1>
@@ -122,8 +130,24 @@
 
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
-    <img alt="Fotografie PostCube" src="{{ firmyBG01 | cloudinaryUrl(dpr=" auto", width=860) }}">
-    <img alt="Fotografie PostCube" src="{{ firmyBG02 | cloudinaryUrl(dpr=" auto", width=860) }}">
+    <picture>
+      <source media="screen and (min-width: 839px)" srcset="{{ firmyBG01 | cloudinaryUrl(width=420) }} 1x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=420) }} 1.5x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ firmyBG01 | cloudinaryUrl(width=860) }} 1x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=860) }} 1.5x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=860) }} 2x">
+      <img alt="Fotografie PostCube u domu" src="{{ firmyBG01 | cloudinaryUrl(width=860) }}" width="860" height="573">
+    </picture>
+    <picture>
+      <source media="screen and (min-width: 839px)" srcset="{{ firmyBG02 | cloudinaryUrl( width=420) }} 1x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=420) }} 1.5x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ firmyBG02 | cloudinaryUrl(width=860) }} 1x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=860) }} 1.5x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=860) }} 2x">
+      <img alt="Fotografie PostCube ve vašem domě" src="{{ firmyBG02 | cloudinaryUrl(width=860) }}" width="860" height="573">
+    </picture>
   </div>
 
   <section class="testimonial mdc-layout-grid">
