--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -17,8 +17,8 @@
     </div>
     <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
       <img alt="Postcube jako mobilní aplikace" loading="lazy" src="{{ getApp | cloudinaryUrl(dpr=" auto", width=540) }}" srcset="{{ getApp | cloudinaryUrl(dpr=" 1", width=540) }} 1x,
-              {{ getApp | cloudinaryUrl(dpr=" 1.5", width=540) }} 1.5x,
-              {{ getApp | cloudinaryUrl(dpr=" 2", width=540) }} 2x" width="540" height="640">
+              {{ getApp | cloudinaryUrl(width=540) }} 1.5x,
+              {{ getApp | cloudinaryUrl(width=540) }} 2x" width="540" height="640">
     </div>
   </div>
 </section>
