--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -14,7 +14,7 @@
   <meta property="og:url" content="https://www.postcube.cz/">
   <meta property="og:site_name" content="postcube.cz">
   <style>
-    img {
+    img, picture {
       width: 100%;
       height: auto;
     }
@@ -86,16 +86,16 @@
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <picture>
-            <source media="screen and (max-width: 399px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=400) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr=" 2", width=400) }} 2x">
-            <source media="screen and (min-width: 400px) and (max-width: 599px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=600) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=600) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr=" 2", width=600) }} 2x">
-            <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
-                      {{ box_header | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
-            <img alt="Fotka PostCube" src="{{ box_header | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="581">
+            <source media="screen and (max-width: 399px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
+                      {{ box_header | cloudinaryUrl(width=400) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(width=400) }} 2x">
+            <source media="screen and (min-width: 400px) and (max-width: 599px)" srcset="{{ box_n_woman | cloudinaryUrl(width=420) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(width=600) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(width=600) }} 2x">
+            <source media="screen and (min-width: 840px)" srcset="{{ box_n_woman | cloudinaryUrl(width=860) }} 1x,
+                {{ box_n_woman | cloudinaryUrl(width=860) }} 1.5x,
+                {{ box_n_woman | cloudinaryUrl(width=860) }} 2x">
+            <img alt="Fotografie PostCube u domu" loading="lazy" src="{{ box_n_woman | cloudinaryUrl }}" width="860" height="574">
           </picture>
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
@@ -201,22 +201,22 @@
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
     <picture>
-      <source media="screen and (max-width: 839px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=420) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(dpr=" 1.5", width=420) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(dpr=" 2", width=420) }} 2x">
-      <source media="screen and (min-width: 840px)" srcset="{{ box_n_woman | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
-      <img alt="Fotografie PostCube u domu" loading="lazy" src="{{ box_n_woman | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="574">
+      <source media="screen and (max-width: 839px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=400) }} 1x,
+                      {{ box_header | cloudinaryUrl(width=420) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
+                      {{ box_header | cloudinaryUrl(width=860) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(width=860) }} 2x">
+      <img alt="Fotka PostCube" src="{{ box_header | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="581">
     </picture>
     <picture>
-      <source media="screen and (max-width: 839px)" srcset="{{ hpBg02 | cloudinaryUrl(dpr=" 1", width=420) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(dpr=" 1.5", width=420) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(dpr=" 2", width=420) }} 2x">
-      <source media="screen and (min-width: 840px)" srcset="{{ hpBg02 | cloudinaryUrl(dpr=" 1", width=860) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(dpr=" 1.5", width=860) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(dpr=" 2", width=860) }} 2x">
-      <img alt="Fotografie PostCube jako poštovní schránky" loading="lazy" src="{{ hpBg02 | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="574">
+      <source media="screen and (max-width: 839px)" srcset="{{ hpBg02 | cloudinaryUrl(width=420) }} 1x,
+                {{ hpBg02 | cloudinaryUrl(width=420) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(width=420) }} 2x">
+      <source media="screen and (min-width: 840px)" srcset="{{ hpBg02 | cloudinaryUrl(width=860) }} 1x,
+                {{ hpBg02 | cloudinaryUrl(width=860) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(width=860) }} 2x">
+      <img alt="Fotografie PostCube jako poštovní schránky" loading="lazy" src="{{ hpBg02 | cloudinaryUrl(width=860) }}" width="860" height="574">
     </picture>
   </div>
 
