Postcube - dpr auto ve Firmě

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -202,20 +202,20 @@
   <div class="guarantee__bg">
     <picture>
       <source media="screen and (max-width: 839px)" srcset="{{ box_header | cloudinaryUrl(width=400) }} 1x,
-                      {{ box_header | cloudinaryUrl(width=420) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(width=420) }} 2x">
+                      {{ box_header | cloudinaryUrl(dpr="auto", width=420) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(dpr="auto", width=420) }} 2x">
       <source media="screen and (min-width: 840px)" srcset="{{ box_header | cloudinaryUrl(width=860) }} 1x,
-                      {{ box_header | cloudinaryUrl(width=860) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(width=860) }} 2x">
+                      {{ box_header | cloudinaryUrl(dpr="auto", width=860) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(dpr="auto", width=860) }} 2x">
       <img alt="Fotka PostCube" src="{{ box_header | cloudinaryUrl(dpr=" auto", width=860) }}" width="860" height="581">
     </picture>
     <picture>
       <source media="screen and (max-width: 839px)" srcset="{{ hpBg02 | cloudinaryUrl(width=420) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(width=420) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(width=420) }} 2x">
+                {{ hpBg02 | cloudinaryUrl(dpr="auto", width=420) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(dpr="auto", width=420) }} 2x">
       <source media="screen and (min-width: 840px)" srcset="{{ hpBg02 | cloudinaryUrl(width=860) }} 1x,
-                {{ hpBg02 | cloudinaryUrl(width=860) }} 1.5x,
-                {{ hpBg02 | cloudinaryUrl(width=860) }} 2x">
+                {{ hpBg02 | cloudinaryUrl(dpr="auto", width=860) }} 1.5x,
+                {{ hpBg02 | cloudinaryUrl(dpr="auto", width=860) }} 2x">
       <img alt="Fotografie PostCube jako poštovní schránky" loading="lazy" src="{{ hpBg02 | cloudinaryUrl(width=860) }}" width="860" height="574">
     </picture>
   </div>
