Postcube - Vyberte si ideální postcube - změna textu

--- a/postcube.cz/src/html/components/choose-pc.njk
+++ b/postcube.cz/src/html/components/choose-pc.njk
@@ -67,7 +67,7 @@
         </div>
         <h3>Cena podle náročnosti vašich přání</h3>
         <p>Pořizovací cena PostCube se odvíjí od její velikosti, způsobu instalace
-          a vybraného příslušenství včetně kamerového systému.</p>
+          a vybraného příslušenství.</p>
       </div>
     </div>
   </div>
