Postcube - Hashtag v headeru odsazen

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -102,7 +102,7 @@
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube k&nbsp;rodinnému domu</h1>
           <p>Zásilka vám dorazí nezávisle na tom, co právě děláte. Kurýr ji zvládne doručit bez vaší přítomnosti!
-            <a href="https://www.instagram.com/post.cube/">
+           <br><a href="https://www.instagram.com/post.cube/">
               <b>#necekamnakuryra</b>
             </a>
           </p>
