Postcube - změna barvy v headeru

--- a/postcube.cz/src/stylesheets/components/header.scss
+++ b/postcube.cz/src/stylesheets/components/header.scss
@@ -10,6 +10,9 @@ header {
   nav {
     float: right;
   }
+  .menu__list a {
+    color: var(--postcube-black);
+  }
 
   ul li {
     list-style: none;
