Postcube - Sjednocení Intro fotka + text

--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -25,7 +25,7 @@
     }
 
     .main-info__content {
-      max-width: 97%;
+      max-width: 540px;
     }
 
     .about .icon-section__content svg {
