Postcube - Oprava linku pro Jak Box Funguje

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -153,7 +153,7 @@
         </svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
         <p>Pro příjem zboží stačí kurýrovi poslat jednorázový odkaz pro otevření PostCube a při odesílání vyplnit údaje o příjemci a vložit zásilku do chytré schránky.
-          <a href="www.postcube.cz/jak-box-funguje/#step--one">Zjistit více</a>
+          <a href="/jak-box-funguje/#step--one">Zjistit více</a>
         </p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
