Postcube - Margin textu Get App v podstránce Přepravci

--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -63,6 +63,9 @@
       .main-info img {
         display: none;
       }
+      .get-app {
+        margin-bottom: 12em;
+      }
     }
 
   </style>
